--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ean-generator",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A randomly generated EAN-13 code FOR Amazon",
-  "keywords": [],
+  "keywords": ["ean", "ean-generator", "ean-13", "ean13", "amazon"],
   "main": "dist/ean-generator.umd.js",
   "module": "dist/ean-generator.es5.js",
   "typings": "dist/types/ean-generator.d.ts",
