--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ean-generator",
-  "version": "0.0.6",
-  "description": "A randomly generated EAN-13 code FOR Amazon",
+  "version": "0.0.7",
+  "description": "A randomly generated EAN-13 code For Amazon",
   "keywords": ["ean", "ean-generator", "ean-13", "ean13", "amazon"],
   "main": "dist/ean-generator.umd.js",
   "module": "dist/ean-generator.es5.js",
